--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,15 @@ android.enableJetifier=true
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m -Djavax.net.ssl.trustStoreType=JKS
+
+# Dependencies versions
+# Android - actual for android modules
+version.cicerone=5.1.1
+version.toothpick=3.1.0
+version.androidx.core=1.3.0
+version.androidx.material=1.3.0-alpha01
+version.androidx.arch=1.1.1
+version.androidx.appcompat=1.2.0
+version.androidx.constraint=2.0.2
+version.androidx.test.runner=1.3.0
+version.androidx.test.espresso=3.3.0
