--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ version.androidx.constraint=2.0.2
 version.androidx.test.runner=1.3.0
 version.androidx.test.espresso=3.3.0
 version.coroutines.viewmodel=2.2.0
+version.facebook.shimmer=0.5.0
 
 # Application - actual for applications (android, web, ios)
 version.ktor=1.3.1
