--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,8 @@ kapt.incremental.apt=true
 # Android - actual for android application part
 version.cicerone=5.1.1
 version.toothpick=3.1.0
+version.slidinguppanel=3.4.0
+version.androidx.fragment=1.2.0
 version.androidx.paging=2.1.2
 version.androidx.core=1.3.0
 version.androidx.material=1.3.0-alpha01
