--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ kapt.incremental.apt=true
 version.cicerone=5.1.1
 version.toothpick=3.1.0
 version.slidinguppanel=3.4.0
+version.gifdrawable=1.2.21
 version.androidx.fragment=1.2.0
 version.androidx.paging=2.1.2
 version.androidx.core=1.3.0
