--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ version.cicerone=5.1.1
 version.toothpick=3.1.0
 version.slidinguppanel=3.4.0
 version.gifdrawable=1.2.21
+version.exoplayer=2.9.4
 version.androidx.fragment=1.2.0
 version.androidx.paging=2.1.2
 version.androidx.core=1.3.0
