--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ version.toothpick=3.1.0
 version.slidinguppanel=3.4.0
 version.gifdrawable=1.2.21
 version.exoplayer=2.12.2
+version.dexter=6.2.2
 version.androidx.fragment=1.2.0
 version.androidx.paging=2.1.2
 version.androidx.core=1.3.0
