--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ version.gifdrawable=1.2.21
 version.exoplayer=2.12.2
 version.dexter=6.2.2
 version.androidx.fragment=1.2.0
-version.androidx.paging=2.1.2
+version.androidx.paging=3.0.0-alpha11
 version.androidx.core=1.3.0
 version.androidx.material=1.3.0-alpha01
 version.androidx.arch=1.1.1
