--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
         project_version_code = 1
         project_version_name = "1.0"
 
-        compose_version = '1.2.0'
+        compose_version = '1.3.2'
         compose_ui_version = "1.3.0-alpha01"
         compose_ui_tooling_version = "1.2.1"
         compose_runtime_version = "1.2.1"
         compose_permission_version = "0.25.0"
         compose_viewmodel_version = "2.5.0"
-        compose_navigation_version = "2.5.3"
+        compose_navigation_version = "2.5.2"
         compose_hilt_version = '1.0.0'
         compose_swiperefresh_version = '0.27.0'
         compose_material3_version = '1.0.0-alpha11'
@@ -32,8 +32,12 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
