--- a/feature/healthcheck-data/build.gradle
+++ b/feature/healthcheck-data/build.gradle
@@ -11,8 +11,13 @@ java {
 dependencies {
     implementation project(":feature:healthcheck-domain")
 
+    // Ktor
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-cio:$ktor_version"
     implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
     implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
+
+    // Dagger & Hilt
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:hilt-core:$dagger_version"
 }
